se implementa inicio de sesión y se eliminan dos botones

--- a/templates/pantalla_principal.html
+++ b/templates/pantalla_principal.html
@@ -499,9 +499,8 @@
                     <input type="text" placeholder="Buscar productos...">
                 </div>
                 <div class="header-actions">
-                    <button class="action-btn">👤</button>
-                    <button class="action-btn">❤️</button>
-                    <button class="action-btn">🛒 <span class="badge">3</span></button>
+                  
+                    <button class="action-btn">🛒 </button>
                 </div>
             </div>
             <nav>
